--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Snake-Game</title>
   </head>
   <body>
-    <div id="screen-wrapper">
+    <div id="pause_menu">
+      <img src="./images/pause.png" id="pause__btn">
+      <img src="./images/play-buttton.png" id="resume__btn">
+    </div>
+
+    <div id="screen-wrapper">      
       <div id="start-menu">
         <button>START</button>
       </div>
